elevated rails block

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.0
+Date: 2025-11-22
+  Balancing:
+    - you can't place elevated rails on deepwater by default
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2025-11-20
   Balancing:
