--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.0
+Date: 2025-11-26
+  Changelog:
+    - renamed collision layer to save layer count if this mod is installed with pelagos
+---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 2025-11-22
   Balancing:
