--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,19 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.6.0
+Date: 2025-12-15
+  Changelog:
+    - with Pealgos installed and without Any Planet Start installed you will always have oil patches on ground to prevent progression locking  
+---------------------------------------------------------------------------------------------------
+Version: 0.5.0
+Date: 2025-12-13
+  Changelog:
+    - added dependancy on my cargo ships tweaks 
+---------------------------------------------------------------------------------------------------
+Version: 0.4.0
+Date: 2025-12-07
+  Changelog:
+    - added compatibility with bztitanium and made uranium sludge addtion to tech tree harder to override
+---------------------------------------------------------------------------------------------------
 Version: 0.3.0
 Date: 2025-11-26
   Changelog:
