lighthouse + wooden platform

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.9.0
+Date: 2026-02-17
+  Changelog:
+    - added lighthouse as dependency
+    - added wooden platform as dependency
+---------------------------------------------------------------------------------------------------
+Version: 0.8.1
+Date: 2026-01-15
+  Changelog:
+    - updated ru locale. Thanks YunaKosha!
+---------------------------------------------------------------------------------------------------
 Version: 0.8.0
 Date: 2026-01-14
   Changelog:
